Fix extra padding on left side of first element

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,7 +12,6 @@
     overflow: hidden;
 }
 
-
 .food {
     height: 100%;
     width: 100%;
@@ -23,6 +22,10 @@
     -moz-transition: all .5s;
     -o-transition: all .5s;
     transition: all .5s;
+}
+
+.food:first-child {
+  padding-left: 0;
 }
 
 .gridPhoto {
